--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    
-    <p onclick="">Слава Україні!</p>
+    <p onclick="">Слава Україні!!!</p>
 
 <script src="js/script.js"></script>
 
